<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.udacity.shoestore.view.ShoeDetailFragment">
    <data>
        <variable
            name="shoeObj"
            type="com.udacity.shoestore.model.Shoe" />
    </data>
    <!-- use ConstraintLayout becouse of it helps you to avoid using nested layouts and it causes better performance and easier to implement free desgins with it  -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addShoe_textView"
            style="@style/header"
            android:text="@string/add_shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- use linear layout desgin simple structure and make sure that label and input field in the same horizontal level in all devices -->

        <LinearLayout
            android:id="@+id/shoename_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addShoe_textView">

            <TextView
                android:id="@+id/ShoeName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/ShoeName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/enter_shoe_name"
                android:ems="10"
                android:hint="@string/enter_shoe_name"
                android:inputType="text"
                android:text="@={shoeObj.name}"
                android:textColorHint="#546E7A"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
        <!-- use linear layout desgin simple structure and make sure that label and input field in the same horizontal level in all devices -->

        <LinearLayout
            android:id="@+id/CompanyLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoename_layout">

            <TextView
                android:id="@+id/company_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/company" />

            <EditText
                android:id="@+id/company_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Enter Company Name"
                android:ems="10"
                android:text="@={shoeObj.company}"
                android:hint="Enter Company Name"
                android:inputType="text"
                android:textColorHint="#546E7A"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>
        <!-- use linear layout desgin simple structure and make sure that label and input field in the same horizontal level in all devices -->

        <LinearLayout
            android:id="@+id/sizeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CompanyLayout">

            <TextView
                android:id="@+id/size_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/size_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/enter_shoe_size"
                android:ems="10"
                android:text="@={``+ shoeObj.size}"
                android:hint="@string/enter_shoe_size"
                android:inputType="numberSigned|numberDecimal"
                android:textColorHint="#546E7A"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>
        <!-- use linear layout desgin simple structure and make sure that label and input field in the same horizontal level in all devices -->

        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeLayout">

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_editText"
                android:text="@={shoeObj.description}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/enter_shoe_description"
                android:ems="10"
                android:hint="@string/enter_shoe_description"
                android:inputType="text"
                android:textColorHint="#546E7A"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLayout" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_btn"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>